tests/baselines/reference/spellingSuggestionLeadingUnderscores01.errors.txt
spellingSuggestionLeadingUnderscores01.ts(6,3): error TS2551: Property '___foo' does not exist on type '{ __foo: 10; }'. Did you mean '__foo'?
spellingSuggestionLeadingUnderscores01.ts(14,5): error TS2561: Object literal may only specify known properties, but '___foo' does not exist in type '{ __foo: number; }'. Did you mean to write '__foo'?


==== spellingSuggestionLeadingUnderscores01.ts (2 errors) ====
    // @filename abc.ts
    export declare let a: {
        __foo: 10,
    }
    
    a.___foo
      ~~~~~~
!!! error TS2551: Property '___foo' does not exist on type '{ __foo: 10; }'. Did you mean '__foo'?
!!! related TS2728 spellingSuggestionLeadingUnderscores01.ts:3:5: '__foo' is declared here.
    
    // @filename def.ts
    export let b: {
        __foo: number
    }
    
    b = {
        ___foo: 100,
        ~~~~~~
!!! error TS2561: Object literal may only specify known properties, but '___foo' does not exist in type '{ __foo: number; }'. Did you mean to write '__foo'?
    }
    
    